--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -1,20 +1,7 @@
-name: Swift
+name: Swift Package Manager
 
-on:
-  pull_request:
-    branches: [ "develop" ]
+on: [push, pull_request]
 
 jobs:
-  build:
-    runs-on: macos-latest
-
-    steps:
-    - uses: actions/checkout@v4
-    - name: Setup Swift
-      uses: fwal/setup-swift@v2
-      with:
-        swift-version: '6.0.0'
-    - name: Build
-      run: swift build -v
-    - name: Run tests
-      run: swift test -v
+  use-reusable:
+    uses: EasyPackages/.github/.github/workflows/ci.yml@main
