--- a/.github/workflows/build_and_test_packages.yml
+++ b/.github/workflows/build_and_test_packages.yml
@@ -1,6 +1,10 @@
 name: Swift Package Manager
 
-on: [push, pull_request]
+on:
+  pull_request:
+    branches:
+      - main
+      - develop
 
 jobs:
   use-reusable:
